feat: data parsing

--- a/lecture10_sql_wordcount.ipynb
+++ b/lecture10_sql_wordcount.ipynb
@@ -48,20 +48,21 @@
     "\n",
     "spark = SparkSession.builder.appName(\"df_wordcount\").getOrCreate()\n",
     "\n",
-    "# # functions.explode(col)\n",
-    "# # Returns a new row for each element in the given array or map\n",
-    "# df = spark.createDataFrame([\n",
-    "#         Row(a=1,\n",
-    "#             intlist=[1,2,3],\n",
-    "#             mapfield={\"a\": \"b\"}\n",
-    "#            )])\n",
-    "\n",
-    "# df.select(functions.explode(df.intlist).alias(\"anInt\")).collect()\n",
-    "# # output: [Row(anInt=1), Row(anInt=2), Row(anInt=3)]\n",
+    "# functions.explode(col)\n",
+    "# Returns a new row for each element in the given array or map\n",
+    "df = spark.createDataFrame([\n",
+    "        Row(a=1,\n",
+    "            intlist=[1,2,3],\n",
+    "            mapfield={\"a\": \"b\"}\n",
+    "           )])\n",
     "\n",
     "\n",
-    "# # functions.split(str, pattern, limit=-1)\n",
-    "# # Splits str around matches of the given pattern.\n",
+    "df.select(functions.explode(df.intlist).alias(\"anInt\")).collect()\n",
+    "# output: [Row(anInt=1), Row(anInt=2), Row(anInt=3)]\n",
+    "\n",
+    "\n",
+    "# functions.split(str, pattern, limit=-1)\n",
+    "# Splits str around matches of the given pattern.\n",
     "# df = spark.createDataFrame([\n",
     "#         Row(word=\"hello world and pyspark\")])\n",
     "# df.select(functions.split(df.word, ' ').alias(\"word\")).collect()\n",
@@ -99,7 +100,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.11.6"
   },
   "vscode": {
    "interpreter": {
