--- a/lecture11_sql_struct.ipynb
+++ b/lecture11_sql_struct.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "id": "42393949-0d35-4b18-9dcd-10bde31ade92",
    "metadata": {},
    "outputs": [
@@ -10,8 +10,34 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "+--------------------+----------------+\n",
+      "|             country|min(temperature)|\n",
+      "+--------------------+----------------+\n",
+      "|                Chad|           -24.0|\n",
+      "|            Anguilla|           -40.0|\n",
+      "|            Paraguay|            30.0|\n",
+      "|               Macao|           -34.0|\n",
+      "|Heard Island and ...|           -39.0|\n",
+      "|               Yemen|           -33.0|\n",
+      "|             Senegal|           -21.0|\n",
+      "|              Sweden|           -29.0|\n",
+      "|             Tokelau|           -35.0|\n",
+      "|            Kiribati|           -26.0|\n",
+      "|French Southern T...|           -22.0|\n",
+      "|   Republic of Korea|           -18.0|\n",
+      "|              Guyana|           -28.0|\n",
+      "|             Eritrea|           -40.0|\n",
+      "|         Philippines|           -34.0|\n",
+      "|              Jersey|           -21.0|\n",
+      "|      Norfolk Island|           -28.0|\n",
+      "|               Tonga|           -40.0|\n",
+      "|           Singapore|           -25.0|\n",
+      "|            Malaysia|           -21.0|\n",
+      "+--------------------+----------------+\n",
+      "only showing top 20 rows\n",
+      "\n",
       "+--------------------+-------------------+\n",
-      "|                city|        temperature|\n",
+      "|             country|        temperature|\n",
       "+--------------------+-------------------+\n",
       "|                Guam|              -13.0|\n",
       "|                Guam|              102.2|\n",
@@ -63,7 +89,7 @@
     "\n",
     "min_temperature = data.groupBy(\"country\").min(\"temperature\")\n",
     "\n",
-    "# min_temperature.show()\n",
+    "min_temperature.show()\n",
     "\n",
     "# # celsius to fahrenheit: (0°C × 9/5) + 32 \n",
     "f_temperature = data.withColumn(\n",
@@ -72,6 +98,14 @@
     "                .select(\"country\", \"temperature\")\n",
     "f_temperature.show()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "46f7370b-5d3a-4e13-8abc-c5e0f4554d37",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -90,7 +124,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.7"
+   "version": "3.11.6"
   },
   "vscode": {
    "interpreter": {
