--- a/lecture15_missing_data.ipynb
+++ b/lecture15_missing_data.ipynb
@@ -40,8 +40,10 @@
     "# DataFrame.na: Returns a DataFrameNaFunctions for handling missing values.\n",
     "# DataFrame.dropna(how='any', thresh=None, subset=None)[source]: Returns a new DataFrame omitting rows with null values. DataFrame.dropna() and DataFrameNaFunctions.drop() are aliases of each other.\n",
     "#   how: 'any’ or ‘all’. If ‘any’, drop a row if it contains any nulls. If ‘all’, drop a row only if all its values are null.\n",
-    "#   thresh: default None If specified, drop rows that have less than thresh non-null values. This overwrites the how parameter.\n",
-    "#   subset: optional list of column names to consider.\n",
+    "#         any: null이 있으면 drop\n",
+    "#         all: 모두 null이면 drop\n",
+    "#   thresh: default None If specified, drop rows that have less than thresh non-null values. This overwrites the how parameter.(빈칸의 갯수를 지정해서 drop)\n",
+    "#   subset: optional list of column names to consider.(특정 컬럼이 null일때 drop)\n",
     "\n",
     "# df.na.drop(how=\"any\").show()\n",
     "# df.na.drop(thresh=2).show()\n",
@@ -49,6 +51,7 @@
     "\n",
     "df.printSchema()\n",
     "\n",
+    "# 알아서 자료형을 맞춰서 채워 넣어준다.\n",
     "# # fill string\n",
     "# df.na.fill(\"engineer\").show()\n",
     "\n",
@@ -72,15 +75,16 @@
     "df = spark.read.csv(\n",
     "    \"file:///home/jovyan/work/sample/date_parsing.csv\", header=True, inferSchema=True)\n",
     "\n",
-    "# # show year\n",
-    "# df.select(f.year('date')).show()\n",
+    "# show year\n",
+    "df.select(f.year('date')).show()\n",
     "\n",
-    "# # show month\n",
-    "# df.select(f.month('date')).show()\n",
+    "# show month\n",
+    "df.select(f.month('date')).show()\n",
     "\n",
-    "# # show day\n",
-    "# df.select(f.dayofmonth('date').alias('day')).show()\n",
-    "# df.select(f.dayofyear('date').alias('day')).show()\n",
+    "# show day\n",
+    "df.select(f.dayofmonth('date').alias('day')).show()\n",
+    "# 365일 중 몇일째 인지\n",
+    "df.select(f.dayofyear('date').alias('day')).show()\n",
     "\n",
     "df = df.withColumn(\"year\", f.year('date')).groupBy(\"year\").mean(\"number\").withColumnRenamed(\"avg(number)\", \"avg\")\n",
     "# df.show()\n",
@@ -104,7 +108,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
