--- a/lecture12_sql_total.ipynb
+++ b/lecture12_sql_total.ipynb
@@ -1,6 +1,29 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "e3e6a269-2ad7-441a-b4db-d7b340d62943",
+   "metadata": {},
+   "source": [
+    "### 각 부분의 역할\n",
+    ".agg(...):\n",
+    "DataFrame에 대해 집계 연산을 수행하는 메서드입니다.\n",
+    "여러 열에 대해 집계 연산을 수행할 수 있습니다.\n",
+    "\n",
+    "f.round(...):\n",
+    "주어진 열 값을 반올림하는 함수입니다.\n",
+    "첫 번째 인수는 반올림할 값이고, 두 번째 인수는 반올림할 소수점 자릿수입니다.\n",
+    "\n",
+    "f.sum(\"price\"):\n",
+    "price 열의 합계를 계산하는 집계 함수입니다.\n",
+    "이 함수는 price 열의 모든 값을 더합니다.\n",
+    "\n",
+    ".alias(\"cost\"):\n",
+    "결과 열의 이름을 지정하는 메서드입니다.\n",
+    "여기서는 집계 결과를 cost라는 이름으로 지정합니다."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "id": "39ebc1b5-eb60-4876-ace9-dd81d70f0981",
@@ -87,7 +110,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.7"
+   "version": "3.11.6"
   },
   "vscode": {
    "interpreter": {
