--- a/lecture13_broadcast.ipynb
+++ b/lecture13_broadcast.ipynb
@@ -1,6 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "75c24e43-1fb2-4c4b-b04a-03859c051d3a",
+   "metadata": {},
+   "source": [
+    "## UDF로 등록하는 의미\n",
+    "사용자 정의 함수의 등록: Python으로 작성한 함수를 PySpark의 함수로 등록하여 DataFrame 연산에서 사용할 수 있게 합니다.\n",
+    "분산 처리: Spark는 데이터를 분산된 노드에서 처리하므로, UDF는 각 노드에서 실행될 수 있도록 직렬화되고, 노드에서 데이터에 대해 병렬로 적용됩니다.\n",
+    "유연성 제공: PySpark의 기본 제공 함수로는 수행할 수 없는 복잡한 로직을 구현하여 데이터 프레임의 각 행에 적용할 수 있습니다."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 17,
    "id": "39ebc1b5-eb60-4876-ace9-dd81d70f0981",
@@ -79,7 +90,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.7 64-bit",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -93,7 +104,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.7"
+   "version": "3.11.6"
   },
   "vscode": {
    "interpreter": {
