--- a/lecture14_graph.ipynb
+++ b/lecture14_graph.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 5,
    "id": "bbcccbe1-2fd4-4db6-9dc0-4e934976f00f",
    "metadata": {},
    "outputs": [
@@ -14,7 +14,7 @@
       "|                hero|          connection|connection_size|\n",
       "+--------------------+--------------------+---------------+\n",
       "|     CAPTAIN AMERICA|URICH, DORIS,ARMA...|           1795|\n",
-      "|SPIDER-MAN/PETER PAR|RED SHIFT,GAMELIN...|           1737|\n",
+      "|SPIDER-MAN/PETER PAR|MAGMA II/JONATHAN...|           1737|\n",
       "| IRON MAN/TONY STARK|RED SHIFT,SABRETO...|           1443|\n",
       "|     WOLVERINE/LOGAN|SABRETOOTH/VICTOR...|           1278|\n",
       "|THING/BENJAMIN J. GR|CHORD, ANDREW,CAT...|           1262|\n",
@@ -51,7 +51,7 @@
     "# https://www.kaggle.com/datasets/csanhueza/the-marvel-universe-social-network\n",
     "\n",
     "spark = SparkSession.builder.appName(\"df_most_popular\").getOrCreate()\n",
-    "# csv_file_path = \"file:///home/jovyan/work/sample/hero-network.csv\"\n",
+    "csv_file_path = \"file:///home/jovyan/work/sample/hero-network.csv\"\n",
     "# # read file\n",
     "# df = spark.read\\\n",
     "#             .option(\"header\", \"true\")\\\n",
@@ -64,10 +64,12 @@
     "#             .withColumnRenamed(\"hero1\", \"hero\")\n",
     "# # data.show()\n",
     "# # pyspark.sql.functions.concat_ws(sep, *cols): Concatenates multiple input string columns together into a single string column, using the given separator.\n",
+    "# # concat_ws: 리스트를 한번에 모아주는 역할\n",
     "# data = data.withColumn(\"connection\", f.concat_ws(\",\", f.col(\"connection\")))\n",
     "# data.show()\n",
     "\n",
     "# # DataFrame.coalesce(numPartitions): Returns a new DataFrame that has exactly numPartitions partitions.\n",
+    "# # 데이터가 너무 크면 out of memory 에러가 날 수 있음\n",
     "# data.coalesce(1).write.option(\"header\", True).csv(\"output\")\n",
     "\n",
     "# # load the file\n",
@@ -89,11 +91,19 @@
     "most_popular_hero = df.select(\"hero\").first()\n",
     "print(most_popular_hero.hero)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dafc9b5d-2fc7-42df-a855-d0a6cec1b5ea",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.7 64-bit",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -107,7 +117,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.7"
+   "version": "3.11.6"
   },
   "vscode": {
    "interpreter": {
