--- a/lecture16_join.ipynb
+++ b/lecture16_join.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 5,
    "id": "0c9e4bb7-ea13-413b-b773-34671ab78825",
    "metadata": {},
    "outputs": [
@@ -80,14 +80,15 @@
     "df_salary = spark.createDataFrame(data=salary_data, schema=salary_col)\n",
     "df_salary.show()\n",
     "\n",
-    "# # inner join: join the two dataframes on common key columns.\n",
-    "# # dataframe1.join(dataframe2,dataframe1.column_name ==  dataframe2.column_name,”inner”)\n",
+    "# inner join: join the two dataframes on common key columns.\n",
+    "# dataframe1.join(dataframe2,dataframe1.column_name ==  dataframe2.column_name,”inner”)\n",
+    "# 공통된 키가 있을때만 join\n",
     "# print(\"== inner join ==\")\n",
     "# df_user.join(df_salary,\n",
     "#                df_user.id == df_salary.id,\n",
     "#                \"inner\").show()\n",
     "\n",
-    "# # inner join, then filter\n",
+    "# inner join, then filter\n",
     "# df_user.join(df_salary,\n",
     "#                df_user.id == df_salary.id,\n",
     "#                \"inner\").filter(df_user.id == 1000).show()\n",
@@ -103,43 +104,56 @@
     "#             ).show()\n",
     "\n",
     "# # full outer join: join the two dataframes with all matching and non-matching rows\n",
+    "# 매칭된것과 안된것을 모두 보여주는 것.\n",
     "# print(\"== full outer join ==\")\n",
     "# df_user.join(df_salary, \n",
     "#                df_user.id == df_salary.id, \n",
     "#                \"fullouter\").show()\n",
     "\n",
     "# # left join:  joins by returning all rows from the first dataframe and only matched rows from the second one\n",
+    "# left에 있는것을 모두 매칭하고 right 테이블을 버리는것.\n",
     "# print(\"== left join ==\")\n",
     "# df_user.join(df_salary, \n",
     "#                df_user.id == df_salary.id, \n",
     "#                \"left\").show()\n",
     "\n",
     "# # right join: joins by returning all rows from the second dataframe and only matched rows from the first one\n",
+    "# left join 반대\n",
     "# print(\"== right join ==\")\n",
     "# df_user.join(df_salary, \n",
     "#                df_user.id == df_salary.id, \n",
     "#                \"right\").show()\n",
     "\n",
     "# # left semi join: join all rows from the first dataframe and return only matched rows from the second one\n",
+    "# left에서 match 되는것만 join\n",
     "# print(\"== left semi join ==\")\n",
     "# df_user.join(df_salary, \n",
     "#                df_user.id == df_salary.id, \n",
     "#                \"leftsemi\").show()\n",
     "\n",
     "# # left anti join: join returns only columns from the first dataframe for non-matched records of the second dataframe\n",
+    "# left에서 Match가 안되는 것만 Join\n",
     "# print(\"== left anti join ==\")\n",
     "# df_user.join(df_salary, \n",
     "#                df_user.id == df_salary.id, \n",
     "#                \"leftanti\").show()\n",
     "\n",
     "# # SQL join\n",
-    "# df_user.createOrReplaceTempView(\"user\")\n",
-    "# df_salary.createOrReplaceTempView(\"salary\")\n",
+    "df_user.createOrReplaceTempView(\"user\")\n",
+    "df_salary.createOrReplaceTempView(\"salary\")\n",
     "\n",
-    "# spark.sql(\"SELECT * FROM user, salary WHERE user.id == salary.id\").show()\n",
+    "spark.sql(\"SELECT * FROM user, salary WHERE user.id == salary.id\").show()\n",
     "\n",
-    "# spark.sql(\"SELECT * FROM user INNER JOIN salary ON user.id == salary.id\").show()\n"
+    "spark.sql(\"SELECT * FROM user INNER JOIN salary ON user.id == salary.id\").show()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "81af26ff-a111-4626-a8fb-f2d9edceae05",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
