--- a/lecture23_structured_streaming_console.ipynb
+++ b/lecture23_structured_streaming_console.ipynb
@@ -2,10 +2,45 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "d458b63d-1e0f-4422-931c-0a354fad00bd",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "ERROR:root:KeyboardInterrupt while sending command.\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/usr/local/spark/python/lib/py4j-0.10.9.7-src.zip/py4j/java_gateway.py\", line 1038, in send_command\n",
+      "    response = connection.send_command(command)\n",
+      "               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/usr/local/spark/python/lib/py4j-0.10.9.7-src.zip/py4j/clientserver.py\", line 511, in send_command\n",
+      "    answer = smart_decode(self.stream.readline()[:-1])\n",
+      "                          ^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/opt/conda/lib/python3.11/socket.py\", line 706, in readinto\n",
+      "    return self._sock.recv_into(b)\n",
+      "           ^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "KeyboardInterrupt\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[2], line 36\u001b[0m\n\u001b[1;32m     27\u001b[0m \u001b[38;5;66;03m# Start running the query that prints the running counts to the console\u001b[39;00m\n\u001b[1;32m     28\u001b[0m \u001b[38;5;66;03m# outputMode(\"complete\")는 전체 집계 결과를 출력하도록 설정합니다.\u001b[39;00m\n\u001b[1;32m     29\u001b[0m \u001b[38;5;66;03m# format(\"console\")은 데이터를 콘솔에 출력하도록 설정합니다.\u001b[39;00m\n\u001b[1;32m     30\u001b[0m query \u001b[38;5;241m=\u001b[39m wordCounts \\\n\u001b[1;32m     31\u001b[0m         \u001b[38;5;241m.\u001b[39mwriteStream \\\n\u001b[1;32m     32\u001b[0m         \u001b[38;5;241m.\u001b[39moutputMode(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcomplete\u001b[39m\u001b[38;5;124m\"\u001b[39m) \\\n\u001b[1;32m     33\u001b[0m         \u001b[38;5;241m.\u001b[39mformat(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mconsole\u001b[39m\u001b[38;5;124m\"\u001b[39m) \\\n\u001b[1;32m     34\u001b[0m         \u001b[38;5;241m.\u001b[39mstart()\n\u001b[0;32m---> 36\u001b[0m \u001b[43mquery\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mawaitTermination\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m/usr/local/spark/python/pyspark/sql/streaming/query.py:221\u001b[0m, in \u001b[0;36mStreamingQuery.awaitTermination\u001b[0;34m(self, timeout)\u001b[0m\n\u001b[1;32m    219\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_jsq\u001b[38;5;241m.\u001b[39mawaitTermination(\u001b[38;5;28mint\u001b[39m(timeout \u001b[38;5;241m*\u001b[39m \u001b[38;5;241m1000\u001b[39m))\n\u001b[1;32m    220\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m--> 221\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_jsq\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mawaitTermination\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m/usr/local/spark/python/lib/py4j-0.10.9.7-src.zip/py4j/java_gateway.py:1321\u001b[0m, in \u001b[0;36mJavaMember.__call__\u001b[0;34m(self, *args)\u001b[0m\n\u001b[1;32m   1314\u001b[0m args_command, temp_args \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_build_args(\u001b[38;5;241m*\u001b[39margs)\n\u001b[1;32m   1316\u001b[0m command \u001b[38;5;241m=\u001b[39m proto\u001b[38;5;241m.\u001b[39mCALL_COMMAND_NAME \u001b[38;5;241m+\u001b[39m\\\n\u001b[1;32m   1317\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcommand_header \u001b[38;5;241m+\u001b[39m\\\n\u001b[1;32m   1318\u001b[0m     args_command \u001b[38;5;241m+\u001b[39m\\\n\u001b[1;32m   1319\u001b[0m     proto\u001b[38;5;241m.\u001b[39mEND_COMMAND_PART\n\u001b[0;32m-> 1321\u001b[0m answer \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mgateway_client\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msend_command\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcommand\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   1322\u001b[0m return_value \u001b[38;5;241m=\u001b[39m get_return_value(\n\u001b[1;32m   1323\u001b[0m     answer, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mgateway_client, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mtarget_id, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mname)\n\u001b[1;32m   1325\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m temp_arg \u001b[38;5;129;01min\u001b[39;00m temp_args:\n",
+      "File \u001b[0;32m/usr/local/spark/python/lib/py4j-0.10.9.7-src.zip/py4j/java_gateway.py:1038\u001b[0m, in \u001b[0;36mGatewayClient.send_command\u001b[0;34m(self, command, retry, binary)\u001b[0m\n\u001b[1;32m   1036\u001b[0m connection \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_get_connection()\n\u001b[1;32m   1037\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m-> 1038\u001b[0m     response \u001b[38;5;241m=\u001b[39m \u001b[43mconnection\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msend_command\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcommand\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   1039\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m binary:\n\u001b[1;32m   1040\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m response, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_create_connection_guard(connection)\n",
+      "File \u001b[0;32m/usr/local/spark/python/lib/py4j-0.10.9.7-src.zip/py4j/clientserver.py:511\u001b[0m, in \u001b[0;36mClientServerConnection.send_command\u001b[0;34m(self, command)\u001b[0m\n\u001b[1;32m    509\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m    510\u001b[0m     \u001b[38;5;28;01mwhile\u001b[39;00m \u001b[38;5;28;01mTrue\u001b[39;00m:\n\u001b[0;32m--> 511\u001b[0m         answer \u001b[38;5;241m=\u001b[39m smart_decode(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mstream\u001b[38;5;241m.\u001b[39mreadline()[:\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m])\n\u001b[1;32m    512\u001b[0m         logger\u001b[38;5;241m.\u001b[39mdebug(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mAnswer received: \u001b[39m\u001b[38;5;132;01m{0}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m.\u001b[39mformat(answer))\n\u001b[1;32m    513\u001b[0m         \u001b[38;5;66;03m# Happens when a the other end is dead. There might be an empty\u001b[39;00m\n\u001b[1;32m    514\u001b[0m         \u001b[38;5;66;03m# answer before the socket raises an error.\u001b[39;00m\n",
+      "File \u001b[0;32m/opt/conda/lib/python3.11/socket.py:706\u001b[0m, in \u001b[0;36mSocketIO.readinto\u001b[0;34m(self, b)\u001b[0m\n\u001b[1;32m    704\u001b[0m \u001b[38;5;28;01mwhile\u001b[39;00m \u001b[38;5;28;01mTrue\u001b[39;00m:\n\u001b[1;32m    705\u001b[0m     \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m--> 706\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_sock\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mrecv_into\u001b[49m\u001b[43m(\u001b[49m\u001b[43mb\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    707\u001b[0m     \u001b[38;5;28;01mexcept\u001b[39;00m timeout:\n\u001b[1;32m    708\u001b[0m         \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_timeout_occurred \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mTrue\u001b[39;00m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "from pyspark.sql import SparkSession\n",
     "from pyspark.sql import functions as f\n",
@@ -52,24 +87,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# append:\n",
-    "# 설명: 새로운 행만 추가합니다.\n",
-    "# 사용 시기: 데이터가 항상 증가하는 경우, 예를 들어 로그 데이터나 센서 데이터 스트림.\n",
-    "# 제약 조건: 집계 쿼리에서 사용하기 어렵습니다.\n",
-    "query = wordCounts.writeStream.outputMode(\"append\").format(\"console\").start()\n",
+    "# # append:\n",
+    "# # 설명: 새로운 행만 추가합니다.\n",
+    "# # 사용 시기: 데이터가 항상 증가하는 경우, 예를 들어 로그 데이터나 센서 데이터 스트림.\n",
+    "# # 제약 조건: 집계 쿼리에서 사용하기 어렵습니다.\n",
+    "# query = wordCounts.writeStream.outputMode(\"append\").format(\"console\").start()\n",
     "\n",
-    "# complete:\n",
-    "# 설명: 전체 결과 테이블을 매번 출력합니다.\n",
-    "# 사용 시기: 집계 결과 전체를 매번 다시 출력해야 할 때, 예를 들어, 전체 단어 빈도 집계.\n",
-    "# 제약 조건: 전체 결과를 출력하기 때문에 대용량 데이터셋에서는 비효율적일 수 있습니다.\n",
-    "query = wordCounts.writeStream.outputMode(\"complete\").format(\"console\").start()\n",
+    "# # complete:\n",
+    "# # 설명: 전체 결과 테이블을 매번 출력합니다.\n",
+    "# # 사용 시기: 집계 결과 전체를 매번 다시 출력해야 할 때, 예를 들어, 전체 단어 빈도 집계.\n",
+    "# # 제약 조건: 전체 결과를 출력하기 때문에 대용량 데이터셋에서는 비효율적일 수 있습니다.\n",
+    "# query = wordCounts.writeStream.outputMode(\"complete\").format(\"console\").start()\n",
     "\n",
-    "# update:\n",
-    "# 설명: 업데이트된 결과만 출력합니다.\n",
-    "# 사용 시기: 집계 결과가 자주 업데이트되는 경우, 예를 들어, 카운트가 변경된 단어만 출력.\n",
-    "# 제약 조건: 모든 쿼리에서 사용할 수 있는 것은 아닙니다. 특히, 키가 변경되지 않는 집계에서 유용합니다.\n",
-    "query = wordCounts.writeStream.outputMode(\"update\").format(\"console\").start()\n",
-    "\n"
+    "# # update:\n",
+    "# # 설명: 업데이트된 결과만 출력합니다.\n",
+    "# # 사용 시기: 집계 결과가 자주 업데이트되는 경우, 예를 들어, 카운트가 변경된 단어만 출력.\n",
+    "# # 제약 조건: 모든 쿼리에서 사용할 수 있는 것은 아닙니다. 특히, 키가 변경되지 않는 집계에서 유용합니다.\n",
+    "# query = wordCounts.writeStream.outputMode(\"update\").format(\"console\").start()"
    ]
   },
   {
@@ -79,43 +113,43 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# format은 스트리밍 데이터를 어디에, 그리고 어떻게 저장할지 설정합니다. 여러 가지 형식이 있습니다:\n",
+    "# # format은 스트리밍 데이터를 어디에, 그리고 어떻게 저장할지 설정합니다. 여러 가지 형식이 있습니다:\n",
     "\n",
-    "# console:\n",
-    "# 설명: 스트리밍 데이터를 콘솔에 출력합니다.\n",
-    "# 사용 시기: 디버깅 및 테스트 목적으로 사용.\n",
-    "# 제약 조건: 대규모 데이터에 적합하지 않음.\n",
-    "query = wordCounts.writeStream.format(\"console\").start()\n",
+    "# # console:\n",
+    "# # 설명: 스트리밍 데이터를 콘솔에 출력합니다.\n",
+    "# # 사용 시기: 디버깅 및 테스트 목적으로 사용.\n",
+    "# # 제약 조건: 대규모 데이터에 적합하지 않음.\n",
+    "# query = wordCounts.writeStream.format(\"console\").start()\n",
     "\n",
-    "# memory:\n",
-    "# 설명: 스트리밍 데이터를 인메모리 테이블에 저장합니다.\n",
-    "# 사용 시기: 쿼리 결과를 빠르게 확인하고 싶을 때.\n",
-    "# 제약 조건: 작은 데이터셋에 적합.\n",
-    "query = wordCounts.writeStream.format(\"memory\").queryName(\"tableName\").start()\n",
+    "# # memory:\n",
+    "# # 설명: 스트리밍 데이터를 인메모리 테이블에 저장합니다.\n",
+    "# # 사용 시기: 쿼리 결과를 빠르게 확인하고 싶을 때.\n",
+    "# # 제약 조건: 작은 데이터셋에 적합.\n",
+    "# query = wordCounts.writeStream.format(\"memory\").queryName(\"tableName\").start()\n",
     "\n",
-    "# parquet:\n",
-    "# 설명: 스트리밍 데이터를 Parquet 파일 형식으로 저장합니다.\n",
-    "# 사용 시기: 대규모 데이터 저장 및 후속 분석을 위해.\n",
-    "# 제약 조건: HDFS 또는 다른 파일 시스템 경로 필요.\n",
-    "query = wordCounts.writeStream.format(\"parquet\").option(\"path\", \"/path/to/output\").option(\"checkpointLocation\", \"/path/to/checkpoint\").start()\n",
+    "# # parquet:\n",
+    "# # 설명: 스트리밍 데이터를 Parquet 파일 형식으로 저장합니다.\n",
+    "# # 사용 시기: 대규모 데이터 저장 및 후속 분석을 위해.\n",
+    "# # 제약 조건: HDFS 또는 다른 파일 시스템 경로 필요.\n",
+    "# query = wordCounts.writeStream.format(\"parquet\").option(\"path\", \"/path/to/output\").option(\"checkpointLocation\", \"/path/to/checkpoint\").start()\n",
     "\n",
-    "# csv:\n",
-    "# 설명: 스트리밍 데이터를 CSV 파일 형식으로 저장합니다.\n",
-    "# 사용 시기: 데이터 공유 및 이식성을 위해.\n",
-    "# 제약 조건: HDFS 또는 다른 파일 시스템 경로 필요.\n",
-    "query = wordCounts.writeStream.format(\"csv\").option(\"path\", \"/path/to/output\").option(\"checkpointLocation\", \"/path/to/checkpoint\").start()\n",
+    "# # csv:\n",
+    "# # 설명: 스트리밍 데이터를 CSV 파일 형식으로 저장합니다.\n",
+    "# # 사용 시기: 데이터 공유 및 이식성을 위해.\n",
+    "# # 제약 조건: HDFS 또는 다른 파일 시스템 경로 필요.\n",
+    "# query = wordCounts.writeStream.format(\"csv\").option(\"path\", \"/path/to/output\").option(\"checkpointLocation\", \"/path/to/checkpoint\").start()\n",
     "\n",
-    "# json:\n",
-    "# 설명: 스트리밍 데이터를 JSON 파일 형식으로 저장합니다.\n",
-    "# 사용 시기: JSON 형식이 필요한 경우.\n",
-    "# 제약 조건: HDFS 또는 다른 파일 시스템 경로 필요.\n",
-    "query = wordCounts.writeStream.format(\"json\").option(\"path\", \"/path/to/output\").option(\"checkpointLocation\", \"/path/to/checkpoint\").start()\n",
+    "# # json:\n",
+    "# # 설명: 스트리밍 데이터를 JSON 파일 형식으로 저장합니다.\n",
+    "# # 사용 시기: JSON 형식이 필요한 경우.\n",
+    "# # 제약 조건: HDFS 또는 다른 파일 시스템 경로 필요.\n",
+    "# query = wordCounts.writeStream.format(\"json\").option(\"path\", \"/path/to/output\").option(\"checkpointLocation\", \"/path/to/checkpoint\").start()\n",
     "\n",
-    "# kafka:\n",
-    "# 설명: 스트리밍 데이터를 Kafka 토픽으로 전송합니다.\n",
-    "# 사용 시기: Kafka를 사용한 데이터 파이프라인 구축 시.\n",
-    "# 제약 조건: Kafka 브로커 설정 필요.\n",
-    "query = wordCounts.writeStream.format(\"kafka\").option(\"kafka.bootstrap.servers\", \"localhost:9092\").option(\"topic\", \"topicName\").start()"
+    "# # kafka:\n",
+    "# # 설명: 스트리밍 데이터를 Kafka 토픽으로 전송합니다.\n",
+    "# # 사용 시기: Kafka를 사용한 데이터 파이프라인 구축 시.\n",
+    "# # 제약 조건: Kafka 브로커 설정 필요.\n",
+    "# query = wordCounts.writeStream.format(\"kafka\").option(\"kafka.bootstrap.servers\", \"localhost:9092\").option(\"topic\", \"topicName\").start()"
    ]
   }
  ],
